# autoequalizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
analysis/: AnalysisEngine.cpp  AnalysisEngine.hpp  LoudnessMeter.cpp  LoudnessMeter.hpp
app/: main.cpp
audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioFileIO.cpp  AudioFileIO.hpp
cli/: CommandLine.cpp  CommandLine.hpp
cmake/: FindSndFile.cmake
core/: Math.hpp  Result.hpp  Types.hpp
docs/: report.schema.json
dsp/: Processors.cpp  Processors.hpp
pipeline/: AutoEqualizerPipeline.cpp  AutoEqualizerPipeline.hpp  DecisionEngine.cpp  DecisionEngine.hpp  MasteringStage.cpp  MasteringStage.hpp
report/: Report.cpp  Report.hpp
tests/: AnalysisEngineTests.cpp  CliTests.cpp  DecisionEngineTests.cpp  DspTests.cpp  LoudnessMeterTests.cpp  MasteringStageTests.cpp  PipelineSmokeTests.cpp  TestFramework.hpp  TestMain.cpp
